--- a/api/source/Post.Application/Post.Application.csproj
+++ b/api/source/Post.Application/Post.Application.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\Post.Domain\Post.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.8.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
