--- a/api/source/Post.WebApi/Post.WebApi.csproj
+++ b/api/source/Post.WebApi/Post.WebApi.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Npgsql" Version="4.1.5" />
     <PackageReference Include="FluentMigrator.Runner" Version="3.2.9" />
     <PackageReference Include="FluentMigrator.Runner.Postgres" Version="3.2.9" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.8.0" />
   </ItemGroup>
   
   <PropertyGroup>
